force-app/main/default/objects/MH1__c/MH1__c.object-meta.xml
<CustomObject>
    <label>MH1</label>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MH1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>