force-app/main/default/objects/MH1__c/fields/Check_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Date__c</fullName>
    <description>Date of arrival at Dev Zone</description>
    <inlineHelpText>This should be the first day you attended the Dev Zone events.</inlineHelpText>
    <label>Check In Date</label>
    <type>Date</type>
</CustomField>