force-app/main/default/objects/MH1__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <length>75</length>
    <type>Text</type>
</CustomField>