force-app/main/default/objects/MH1__c/fields/Dev_Zone_Attendee_Num__c.field-meta.xml
<CustomField>
    <fullName>Dev_Zone_Attendee_Num__c</fullName>
    <description>Number of Attendee assigned on registration.</description>
    <label>Dev Zone Attendee #</label>
    <type>AutoNumber</type>
</CustomField>