force-app/main/default/objects/MH1__c/fields/Primary_Phone_Num__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone_Num__c</fullName>
    <description>Attendee primary phone contact number.</description>
    <label>Primary Phone #</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>